objects/Sign_off_Module__c.object
<CustomObject>
    <description>Object is to store sign off  approval for different milestones.</description>
    <fields>
        <fullName>AE_Approval_Name__c</fullName>
        <label>AE Approval Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Approval_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AE Approval User</description>
        <label>AE Approval User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_off_Module</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_Approval__c</fullName>
        <label>AE Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Approval__c</fullName>
        <label>Customer Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Details__c</fullName>
        <label>Customer Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_RTM_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer RTM Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCE_Approval_Name__c</fullName>
        <label>DCE Approval Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCE_Approval_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCE Approval User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_off_Module2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCE_Approval__c</fullName>
        <label>DCE Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DCE_RTL_Checkpoin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCE RTL Checkpoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCE_Review_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCE Review Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Execution__c</fullName>
        <label>Design Execution</label>
        <referenceTo>Design_Execution__c</referenceTo>
        <relationshipLabel>Sign off Module</relationshipLabel>
        <relationshipName>Sign_off_Module</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Design_Center_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Center Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IBM_ASIC__c</fullName>
        <label>IBM ASIC</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PD_Approval_Name__c</fullName>
        <label>PD Approval Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Approval_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PD Approval User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_off_Module3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PD_Approval__c</fullName>
        <label>PD Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PE_Approval_Name__c</fullName>
        <label>PE Approval Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Approval_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PE Approval User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_off_Module1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PE_Approval__c</fullName>
        <label>PE Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PLLs_Comments__c</fullName>
        <inlineHelpText>Has a qualified set of tune bits been properly programmed for PLLs on this design? (Applications Engineer)</inlineHelpText>
        <label>PLLs Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PLLs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PLLs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical_Design_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical Design Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <label>Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLD_Comments__c</fullName>
        <inlineHelpText>If disposition for Customer Application is NOT PQ, please describe why here</inlineHelpText>
        <label>QLD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QLD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer Applicaiton (Applications Engineer) (determined after AE reviews all RTC waivers for this design)</inlineHelpText>
        <label>QLD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Dates__c</fullName>
        <inlineHelpText>If yes, please list those cores below along with their projected qualification dates:</inlineHelpText>
        <label>Qualification Dates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualified_Comments__c</fullName>
        <inlineHelpText>If so, when and how (our testsite or customer hardware) will they be qualified?</inlineHelpText>
        <label>Qualified Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIT_Customer_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RIT Customer Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIT_Type__c</fullName>
        <label>RIT Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A/B</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTL_Checkpoint_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTL Checkpoint Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTM_Comments__c</fullName>
        <label>RTM Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RTM_Ready__c</fullName>
        <label>RTM-Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SignOffExternalId__c</fullName>
        <externalId>true</externalId>
        <label>SignOffExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the Design System used for this design completed it&apos;s T2 Qualification? (Applications Engineer)</inlineHelpText>
        <label>T2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2_qualification__c</fullName>
        <inlineHelpText>If not, please list the projected T2 qualification date: (Applications Engineer)</inlineHelpText>
        <label>T2 qualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_Comments__c</fullName>
        <label>TDI Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TDI_ERelease_Initials__c</fullName>
        <inlineHelpText>ERelease Initials</inlineHelpText>
        <label>TDI ERelease Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_ERelease__c</fullName>
        <inlineHelpText>ERelease</inlineHelpText>
        <label>TDI ERelease</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDI_LPXREF_Initials__c</fullName>
        <label>TDI LPXREF Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_LPXREF__c</fullName>
        <inlineHelpText>LPXREF</inlineHelpText>
        <label>TDI LPXREF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDI_Library_Usage_File_LUF_Initials__c</fullName>
        <inlineHelpText>Library Usage File (LUF)</inlineHelpText>
        <label>TDI Library Usage File (LUF) Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_Library_Usage_File_LUF__c</fullName>
        <inlineHelpText>Library Usage File (LUF)</inlineHelpText>
        <label>TDI Library Usage File (LUF)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDI_TMD_Initials__c</fullName>
        <label>TDI TMD Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_TMD__c</fullName>
        <inlineHelpText>TMD</inlineHelpText>
        <label>TDI TMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDI_Testbench_LUF_TLUF_Initials__c</fullName>
        <label>TDI Testbench LUF (TLUF) Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_Testbench_LUF_TLUF__c</fullName>
        <inlineHelpText>Testbench LUF (TLUF)</inlineHelpText>
        <label>TDI Testbench LUF (TLUF)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDI_VIM_Initials__c</fullName>
        <inlineHelpText>VIM Initials</inlineHelpText>
        <label>TDI VIM Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_VIM__c</fullName>
        <inlineHelpText>VIM</inlineHelpText>
        <label>TDI VIM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDI_Waiver_File_Initials__c</fullName>
        <inlineHelpText>Waiver File Initials</inlineHelpText>
        <label>TDI Waiver File Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_Waiver_File__c</fullName>
        <inlineHelpText>Waiver File</inlineHelpText>
        <label>TDI Waiver File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TMD_Comments__c</fullName>
        <inlineHelpText>Please enter the date that this design was RTM-Ready: (PE)
(Use calendar pop-up to select Date)
(RTM ready denotes that all checking has been completed by the PE, all waivers have been obtained and DPREP has been completed)</inlineHelpText>
        <label>TMD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TMD_ECID_macro__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this design require custom fusing thru the use of spare bits on the ECID macro? (DCE)</inlineHelpText>
        <label>TMD ECID macro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_ECID_section_of_the_LPXREF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this design utilizes any spare bits of the ECID macro to support custom fusing, has the ECID section of the LPXREF been modified according to this design&apos;s customization requirements? (PE)</inlineHelpText>
        <label>TMD ECID section of the LPXREF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the ATPG software been successfully run on this design yielding the Post-Layout Test Manufacturing Data (TMD)? (PE)</inlineHelpText>
        <label>TMD Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_LUF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has an audit been performed on the methodology portion of the LUF? (PE)</inlineHelpText>
        <label>TMD LUF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_LUF_file__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the Post-Layout TMD contain the LUF file? (PE)</inlineHelpText>
        <label>TMD LUF file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_MSV_checks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MSV checks have been run in all required test modes and have completed with no (S) Level errors. (PE)</inlineHelpText>
        <label>TMD MSV checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_Post_Layout_ATPG_Commited_Date__c</fullName>
        <inlineHelpText>Please write the committed date for completion of the Post-Layout ATPG run and the person responsible (date mush be within 5 days Release to Manufacturing data)
Date:</inlineHelpText>
        <label>TMD Post-Layout ATPG Commited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TMD_Post_Layout_ATPG_Name__c</fullName>
        <inlineHelpText>Please write the committed date for completion of the Post-Layout ATPG run and the person responsible (date mush be within 5 days Release to Manufacturing data)
Name:</inlineHelpText>
        <label>TMD Post-Layout ATPG Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMD_Post_Layout_Produciton__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have all required test sign-off checks been run on the Post-Layout Produciton netlist and completed successfully? A &quot;yes&quot; response requires all of the following three bulletted statements to be answered affirmatively: (PE)</inlineHelpText>
        <label>TMD Post-Layout Produciton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_Pre_Layout_ATPG__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the ATPG software been successfully run on this design yielding the Post-Layout Test Manufacturing Data (TMD)? (PE)</inlineHelpText>
        <label>TMD Pre-Layout ATPG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_TSV_checks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TSV checks have been run in all required test modes and have completed with no (S) Level errors. (PE)</inlineHelpText>
        <label>TMD TSV checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_Test_Data_Volume_exceed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Post-Layout data Volume Calculation for this part show that the Test Data Volume will exceed one buffer load? (PE)</inlineHelpText>
        <label>TMD Test Data Volume exceed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMD_afs_dfs_Location__c</fullName>
        <inlineHelpText>Please enter the afs/dfs location of the VIM that the Post_Layout ATPG run should be executed agains: (PE)</inlineHelpText>
        <label>TMD afs/dfs Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are any of the cores used in this design currently unqualified? (Applications Engineer)</inlineHelpText>
        <label>Unqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sign off Module</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SignOffExternalId__c</columns>
        <columns>Application_Engineer__c</columns>
        <columns>AE_Approval__c</columns>
        <columns>Field_Design_Center_Engineer__c</columns>
        <columns>DCE_Approval__c</columns>
        <columns>Physical_Design_Engineer__c</columns>
        <columns>PD_Approval__c</columns>
        <columns>Product_Engineer__c</columns>
        <columns>PE_Approval__c</columns>
        <columns>RIT_Type__c</columns>
        <columns>Customer_Details__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOM-{0000}</displayFormat>
        <label>Sign off Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign off Module</pluralLabel>
    <recordTypes>
        <fullName>EA</fullName>
        <active>true</active>
        <label>EA</label>
    </recordTypes>
    <recordTypes>
        <fullName>EFF</fullName>
        <active>true</active>
        <label>EFF</label>
    </recordTypes>
    <recordTypes>
        <fullName>EFP</fullName>
        <active>true</active>
        <label>EFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTA</fullName>
        <active>true</active>
        <label>RTA</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTC_DT_ready</fullName>
        <active>true</active>
        <label>RTC DT ready</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTC_RIT_A_ready</fullName>
        <active>true</active>
        <label>RTC RIT A ready</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTC_RIT_B_ready</fullName>
        <active>true</active>
        <label>RTC RIT B ready</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTF</fullName>
        <active>true</active>
        <label>RTF</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTL</fullName>
        <active>true</active>
        <label>RTL</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTM_RIT_A_ready</fullName>
        <active>true</active>
        <label>RTM RIT A ready</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTM_RIT_B_ready</fullName>
        <active>true</active>
        <label>RTM RIT B ready</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTM_e_Release</fullName>
        <active>true</active>
        <label>RTM-e-Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTM_e_Release_RIT_A</fullName>
        <active>true</active>
        <label>RTM-e-Release RIT A</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTM_e_Release_RIT_B</fullName>
        <active>true</active>
        <label>RTM-e-Release RIT B</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTP</fullName>
        <active>true</active>
        <label>RTP</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>